--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
@@ -23,6 +26,7 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
+    "next-auth": "^5.0.0-beta.11",
     "typescript": "^5.3.3"
   }
 }
